DisplayString parser refactored